# hyperlax-quantum

./: .gitattributes  .gitignore  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  manifest.xml  pyproject.toml
.github/workflows/: ci.yml
benchmark_results/: brax.inverted-double-pendulum_ppo-drpqc_summary.csv  brax.inverted-double-pendulum_ppo-mlp_summary.csv  brax.inverted-double-pendulum_ppo-tmlp_summary.csv  brax.inverted-double-pendulum_sac-drpqc_summary.csv  brax.inverted-double-pendulum_sac-mlp_summary.csv  brax.inverted-double-pendulum_sac-tmlp_summary.csv  gymnax.acrobot_dqn-drpqc_summary.csv  gymnax.acrobot_dqn-mlp_summary.csv  gymnax.acrobot_dqn-tmlp_summary.csv  gymnax.acrobot_ppo-drpqc_summary.csv  gymnax.acrobot_ppo-mlp_summary.csv  gymnax.acrobot_ppo-tmlp_summary.csv  gymnax.cartpole_dqn-drpqc_summary.csv  gymnax.cartpole_dqn-mlp_summary.csv  gymnax.cartpole_dqn-tmlp_summary.csv  gymnax.cartpole_ppo-drpqc_summary.csv  gymnax.cartpole_ppo-mlp_summary.csv  gymnax.cartpole_ppo-tmlp_summary.csv  gymnax.pendulum_ppo-drpqc_summary.csv  gymnax.pendulum_ppo-mlp_summary.csv  gymnax.pendulum_ppo-tmlp_summary.csv  gymnax.pendulum_sac-drpqc_summary.csv  gymnax.pendulum_sac-mlp_summary.csv  gymnax.pendulum_sac-tmlp_summary.csv  gymnax.reacher_ppo-drpqc_summary.csv  gymnax.reacher_ppo-mlp_summary.csv  gymnax.reacher_ppo-tmlp_summary.csv  gymnax.reacher_sac-drpqc_summary.csv  gymnax.reacher_sac-mlp_summary.csv  gymnax.reacher_sac-tmlp_summary.csv
containers/: singularity.def
docs/: README.md
docs/source/: conf.py
envs/: hyperlax_setup.sh
examples/: 01_sweep_hyperparam_samples.md  02_optuna_hyperparam_search.md  03_benchmark_basic.md  04_benchmark_advanced.md  05_single_file_experiment_config_demo.py
hyperlax/: base_types.py  cli.py
hyperlax/algo/dqn/: config.py  core.py  hyperparam.py  loss.py  main_dqn.py  setup_dqn.py  struct_dqn.py
hyperlax/algo/ppo/: config.py  core.py  hyperparam.py  loss.py  main_ppo.py  setup_ppo.py  struct_ppo.py
hyperlax/algo/sac/: config.py  core.py  hyperparam.py  loss.py  main_sac.py  setup_sac.py  struct_sac.py
hyperlax/analysis/: _main.py  aggregation.py  data_loader.py  export.py  metrics.py  optuna_integration.py  runtime_metadata.py
hyperlax/analysis/plotting/: core.py  matplotlib_backend.py  plotly_backend.py  styles.py
hyperlax/configs/: main_base.py  mapping.py  serialization.py
hyperlax/configs/algo/: dqn_drpqc.py  dqn_drpqc_priors.py  dqn_mlp.py  dqn_mlp_homo_S1024.py  dqn_mlp_no_network_search.py  dqn_mlp_no_network_search_lower_num_envs.py  dqn_tmlp.py  ppo_drpqc.py  ppo_mlp.py  ppo_mlp_homo_S1024.py  ppo_mlp_no_network_search.py  ppo_mlp_no_network_search_lower_num_envs.py  ppo_tmlp.py  ppo_tmlp_larger_arch.py  ppo_vec_mlp.py  ppo_vec_mlp_lower_num_envs.py  runtime_scaling_1_ppo_drpqc_homo_best_case.py  runtime_scaling_1_ppo_mlp_homo_best_case.py  runtime_scaling_1_ppo_mlp_homo_best_case_lower_num_envs.py  runtime_scaling_1_ppo_mlp_homo_best_case_lower_num_envs_no_eval.py  runtime_scaling_2_ppo_drpqc_hetero_algo_hps.py  runtime_scaling_2_ppo_mlp_hetero_algo_hps.py  runtime_scaling_2_ppo_mlp_hetero_algo_hps_lower_num_envs.py  runtime_scaling_2_ppo_mlp_hetero_algo_hps_lower_num_envs_no_eval.py  runtime_scaling_3_ppo_mlp_hetero_network_hps.py  runtime_scaling_3_ppo_mlp_hetero_network_hps_lower_num_envs.py  runtime_scaling_3_ppo_mlp_hetero_network_hps_lower_num_envs_no_eval.py  runtime_scaling_4_ppo_mlp_hetero_algo_and_network_hps.py  runtime_scaling_4_ppo_mlp_hetero_algo_and_network_hps_lower_num_envs.py  runtime_scaling_4_ppo_mlp_hetero_algo_and_network_hps_lower_num_envs_no_eval.py  sac_drpqc.py  sac_mlp.py  sac_mlp_close_to_stoix.py  sac_mlp_homo_S1024.py  sac_mlp_no_network_search.py  sac_mlp_no_network_search_lower_num_envs.py  sac_tmlp.py
hyperlax/configs/benchmark/: ppo_mlp_vs_drpqc.py
hyperlax/configs/env/: base_env.py
hyperlax/configs/env/brax/: ant.py  (+10 more)
hyperlax/configs/logger/: base_logger.py
hyperlax/configs/modifiers/: common_settings.py  experiment_modes.py
hyperlax/configs/network/: actorcritic_drpqc.py  actorcritic_mlp.py  actorcritic_sac_drpqc.py  actorcritic_sac_mlp.py  actorcritic_sac_tmlp.py  actorcritic_tmlp.py  actorcritic_vec_mlp.py  critic_drpqc.py  critic_mlp.py  critic_tmlp.py
hyperlax/env/: __init__.py  brax.py  debug_env.py  episode_metrics.py  frame_stacking.py  gymnax.py  jaxmarl.py  jumanji.py  make_env.py  pgx.py  utils.py  xminigrid.py
hyperlax/evaluator/: core.py  setup.py
hyperlax/hyperparam/: base_types.py  batch.py  distributions.py  io_utils.py  sampler.py  tunable.py  viz.py
hyperlax/layout/: axes.py  base_layout.py  data.py  ops.py  summary.py
hyperlax/logger/: console.py  decorator.py  hp_progress_bar.py  jax_debug.py  metrics.py  plot_resource_util.py  return_tracker.py  sys_monitor.py  utils.py
hyperlax/network/: base.py  data_reuploading.py  distributions.py  heads.py  hyperparam.py  inputs.py  parametric_torso.py  tensorized_mlp.py  torso.py  utils.py
hyperlax/normalizer/: running_stats.py
hyperlax/rbuffer/: masked_item_buffer.py
hyperlax/runner/: base_types.py  batch_utils.py  execution.py  experiment_runner.py  fs_utils.py  launch.py  launch_args.py  launcher_utils.py  optuna.py  sample_generation.py  sampling.py  sequential.py
hyperlax/trainer/: phaser.py  utils.py
hyperlax/utils/: algo_setup.py  import_utils.py  jax_utils.py  type_cast.py
requirements/: freeze_dump_reference.txt  pipdeptree_dump_reference.txt  requirements-dev.txt  requirements.txt
scripts/: plot_runtime_scaling.py  runtime_scaling.sh  runtime_scaling_parser.py
slurm/: gpu.slurm_template  launcher.py
tests/: conftest.py  test_integ_algo_and_network_combos.py
tests/algo/: test_vectorization.py
tests/runner/: test_batch_utils.py  test_directory_setup.py  test_joint_sampling.py  test_launch_cli.py
tests/trainer/: test_phaser.py  test_phaser_e2e.py  test_trainer_utils.py
tests/utils/: test_type_cast.py
(+16 files in other folders)
